RESOLVED FIXED157865
Playback session sends audio and text track lists when media does not have audio or text tracks.
https://bugs.webkit.org/show_bug.cgi?id=157865
Summary Playback session sends audio and text track lists when media does not have au...
Jer Noble
Reported 2016-05-18 15:23:42 PDT
Playback session sends audio and text track lists when media does not have audio or text tracks.
Attachments
Patch (2.73 KB, patch)
2016-05-18 15:26 PDT, Jer Noble
bdakin: review+
Jer Noble
Comment 1 2016-05-18 15:24:12 PDT
Jer Noble
Comment 2 2016-05-18 15:26:52 PDT
Jer Noble
Comment 3 2016-05-18 15:39:32 PDT
Note You need to log in before you can comment on or make changes to this bug.