Playback session sends audio and text track lists when media does not have audio or text tracks. https://bugs.webkit.org/show_bug.cgi?id=157865 <rdar://problem/25992750>

Reviewed by Beth Dakin.

Only send across the CaptionUserPreferences-generated list of audio and text tracks if those
text tracks exist in the first place. This matches the behavior of the built-in controls.

* platform/cocoa/WebPlaybackSessionModelMediaElement.mm:
(WebPlaybackSessionModelMediaElement::updateLegibleOptions):

Canonical link: https://commits.webkit.org/175985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201106 268f45cc-cd09-0410-ab3c-d52691b4dbfc