Source/WebCore/platform/cocoa/WebPlaybackSessionModelMediaElement.mm
@@ -33,6 +33,7 @@
 #import "MediaControlsHost.h"
 #import "WebVideoFullscreenInterface.h"
 #import <QuartzCore/CoreAnimation.h>
+#import <WebCore/AudioTrackList.h>
 #import <WebCore/DOMEventListener.h>
 #import <WebCore/Event.h>
 #import <WebCore/EventListener.h>
@@ -263,8 +264,17 @@ void WebPlaybackSessionModelMediaElement::updateLegibleOptions()
         return;
 
     auto& captionPreferences = m_mediaElement->document().page()->group().captionPreferences();
-    m_legibleTracksForMenu = captionPreferences.sortedTrackListForMenu(&m_mediaElement->textTracks());
-    m_audioTracksForMenu = captionPreferences.sortedTrackListForMenu(&m_mediaElement->audioTracks());
+    auto& textTracks = m_mediaElement->textTracks();
+    if (textTracks.length())
+        m_legibleTracksForMenu = captionPreferences.sortedTrackListForMenu(&textTracks);
+    else
+        m_legibleTracksForMenu.clear();
+
+    auto& audioTracks = m_mediaElement->audioTracks();
+    if (audioTracks.length() > 1)
+        m_audioTracksForMenu = captionPreferences.sortedTrackListForMenu(&audioTracks);
+    else
+        m_audioTracksForMenu.clear();
 
     m_playbackSessionInterface->setAudioMediaSelectionOptions(audioMediaSelectionOptions(), audioMediaSelectedIndex());
     m_playbackSessionInterface->setLegibleMediaSelectionOptions(legibleMediaSelectionOptions(), legibleMediaSelectedIndex());
